# rag-accessibility-pipeline

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile  Dockerfile.dev
src/: __init__.py
src/agents/: __init__.py  generation_agent.py  ingestion_agent.py  retrieval_agent.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  health.py  ingest.py  query.py
src/api/schemas/: __init__.py  ingest.py  query.py
src/core/: __init__.py  config.py  exceptions.py  logging.py
src/graph/: __init__.py  pipeline.py  state.py
src/processors/: __init__.py  ocr_processor.py  pdf_processor.py
src/prompts/: __init__.py  templates.py
src/vector_store/: __init__.py  faiss_store.py
tests/: conftest.py  test_agents.py  test_api.py  test_processors.py
